--- a/MyHome/app/src/main/res/layout/appointments_details.xml
+++ b/MyHome/app/src/main/res/layout/appointments_details.xml
@@ -56,7 +56,7 @@
             tools:ignore="HardcodedText" />
 
         <ImageView
-            android:id="@+id/apt_details_fav"
+            android:id="@+id/heart_icon"
             android:layout_width="27dp"
             android:layout_height="31dp"
             android:layout_alignBottom="@id/doctor_name"
