--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -45,7 +45,7 @@
                         android:ellipsize="end"
                         android:hint="@string/prompt_first_name"
                         android:imeOptions="actionNext"
-                        android:inputType="text"
+                        android:inputType="textCapWords"
                         android:maxLength="35"
                         android:maxLines="1"
                         android:paddingLeft="10dp"
@@ -72,7 +72,7 @@
                         android:ellipsize="end"
                         android:hint="@string/prompt_last_name"
                         android:imeOptions="actionNext"
-                        android:inputType="text"
+                        android:inputType="textCapWords"
                         android:maxLength="35"
                         android:maxLines="1"
                         android:paddingLeft="10dp"
