--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -215,6 +215,10 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="tradeGothicLTStdLight_22" parent="tradeGothicLTStdLight">
+        <item name="android:textSize">22sp</item>
+    </style>
+
     <style name="tradeGothicLTStdLight_24" parent="tradeGothicLTStdLight">
         <item name="android:textSize">24sp</item>
     </style>
