--- a/MyHome/app/src/main/res/layout/adapter_fav_list_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_fav_list_item.xml
@@ -14,7 +14,6 @@
         android:id="@+id/itemLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{handlers::onClickProvider}"
         android:orientation="vertical">
 
         <com.prokarma.myhome.views.CircularImageView
@@ -32,7 +31,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             android:layout_toRightOf="@+id/docImage">
 
@@ -62,7 +60,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/ic_favorite_stroke" />
+                android:onClick="@{handlers::onClickProvider}"
+                android:src="@drawable/ic_favorite_filled" />
 
             <TextView
                 android:id="@+id/viewDoc"
@@ -72,7 +71,6 @@
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/docSpeciality"
                 android:layout_marginTop="10dp"
-                android:layout_toLeftOf="@+id/directions"
                 android:text="View Doctor"
                 android:textColor="@color/accent"
                 android:textStyle="bold" />
@@ -82,7 +80,9 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="25dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="30dp"
             android:background="@color/db_white" />
     </RelativeLayout>
 </layout>
