--- a/MyHome/app/src/main/res/layout/appointments_details.xml
+++ b/MyHome/app/src/main/res/layout/appointments_details.xml
@@ -55,9 +55,9 @@
                 style="@style/tradeGothicLTStd_Dynamic20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="30dp"
-                android:layout_toLeftOf="@+id/apt_details_fav"
                 android:gravity="center"
                 android:text="Dr. Steven M. Howard, MD"
                 android:textIsSelectable="true"
