View All favorite doctors and title changed from find care to care.

--- a/MyHome/app/src/main/res/layout/fragment_provider_list.xml
+++ b/MyHome/app/src/main/res/layout/fragment_provider_list.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="@string/find_a_doctor"
+            android:text="@string/find_care"
             android:visibility="visible" />
 
         <ProgressBar
