--- a/MyHome/app/src/main/res/layout/adapter_fav_list_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_fav_list_item.xml
@@ -14,6 +14,7 @@
         android:id="@+id/itemLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{handlers::onClickProvider}"
         android:orientation="vertical">
 
         <com.prokarma.myhome.views.CircularImageView
