--- a/MyHome/app/src/main/res/layout/appointment_item.xml
+++ b/MyHome/app/src/main/res/layout/appointment_item.xml
@@ -19,8 +19,7 @@
         android:layout_marginLeft="12dp"
         android:gravity="center"
         android:text="Thurs May 26"
-        android:textStyle="bold"
-        android:transitionName="@string/transition_appointment_date" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/time"
@@ -42,6 +41,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@id/date"
         android:layout_marginLeft="12dp"
+        android:layout_marginTop="5dp"
         android:layout_toLeftOf="@+id/pin_icon"
         android:maxWidth="285dp"
         android:text="Sequoia Hospital"
@@ -61,15 +61,11 @@
 
     <ImageView
         android:id="@+id/pin_icon"
-        android:layout_width="24dp"
-        android:layout_height="30dp"
+        android:layout_width="21dp"
+        android:layout_height="25dp"
+        android:layout_alignBottom="@id/doctor_name"
         android:layout_alignLeft="@id/time"
         android:layout_alignRight="@id/time"
-        android:layout_below="@id/time"
-        android:layout_marginEnd="12dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="16dp"
-        android:src="@mipmap/map_blue"
-        android:transitionName="@string/transition_appointment_map_pin" />
+        android:src="@mipmap/map_blue" />
 
 </RelativeLayout>
