--- a/MyHome/app/src/main/res/layout/appointments.xml
+++ b/MyHome/app/src/main/res/layout/appointments.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/book_appointment"
-        style="@style/enableButtonStyle"
-        android:layout_width="255dp"
-        android:layout_height="45dp"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/profile_label_marginTop"
-        android:text="@string/book_an_appointment" />
+    <android.support.design.widget.TabLayout
+        android:id="@+id/appointment_tablayout"
+        style="@style/customTabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabIndicatorColor="@color/primary"
+        app:tabIndicatorHeight="2dp"
+        app:tabMode="fixed"
+        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_appointments"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/md_blue_grey_650" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/appointment_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
