--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -28,6 +28,7 @@
                     android:gravity="left"
                     android:text="Welcome home!"
                     android:textStyle="bold"
+                    android:visibility="gone"
                     tools:ignore="HardcodedText" />
 
                 <RelativeLayout
@@ -35,8 +36,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="11dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_marginTop="25dp">
+                    android:layout_marginStart="11dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
