--- a/MyHome/app/src/main/res/layout/fragment_fad_dashboard.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad_dashboard.xml
@@ -109,13 +109,26 @@
                 tools:ignore="HardcodedText" />
         </RelativeLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/mySavedDocs"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="11dp"
-            android:layout_marginStart="11dp"
-            android:layout_marginTop="8dp" />
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/mySavedDocs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="11dp"
+                android:layout_marginStart="11dp"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:id="@+id/errorView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/no_favorite_doctors"
+                android:visibility="gone" />
+        </RelativeLayout>
     </LinearLayout>
 </layout>
 
