--- a/MyHome/app/src/main/res/layout/appointment_item_empty.xml
+++ b/MyHome/app/src/main/res/layout/appointment_item_empty.xml
@@ -6,12 +6,14 @@
     android:minHeight="48dp">
 
     <TextView
+        android:id="@+id/empty_text"
         style="@style/tradeGothicLTStd_Dynamic18"
-        android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="12dp"
         android:gravity="center"
-        android:text="@string/no_appointments" />
+        android:text="@string/no_upcoming_appointments" />
 
 </RelativeLayout>
