changed  dashboards search action and favorited to saved

--- a/MyHome/app/src/main/res/layout/fragment_fad_dashboard.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad_dashboard.xml
@@ -52,10 +52,12 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="13dp"
             android:ellipsize="end"
+            android:focusable="false"
             android:hint="@string/search_hint"
             android:imeOptions="actionSearch"
-            android:inputType="text"
+            android:inputType="none"
             android:lineSpacingExtra="5sp"
+            android:maxLines="1"
             android:onClick="@{handlers::onClickEvent}"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
@@ -85,7 +87,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_toLeftOf="@+id/fadDashBoardViewall"
                 android:layout_toRightOf="@+id/mySavedDocsId"
-                android:text="My Favorited Doctors"
+                android:text="@string/fav_providers"
                 android:textColor="@color/db_gunmetal"
                 android:textStyle="bold"
                 tools:ignore="HardcodedText" />
