--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -235,10 +235,12 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="13dp"
                     android:ellipsize="end"
+                    android:focusable="false"
                     android:hint="@string/search_hint"
                     android:imeOptions="actionSearch"
-                    android:inputType="text"
+                    android:inputType="none"
                     android:lineSpacingExtra="5sp"
+                    android:maxLines="1"
                     android:paddingLeft="6dp"
                     android:paddingRight="6dp"
                     android:paddingStart="10dp"
