--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -268,7 +268,7 @@
                 android:textSize="13sp" />
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/provider_layout"
+                android:id="@+id/plan_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
@@ -277,11 +277,11 @@
                 app:hintTextAppearance="@style/hint_appearance">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/provider"
+                    android:id="@+id/plan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:hint="@string/insurance_provider"
+                    android:hint="@string/insurance_plan"
                     android:inputType="text"
                     android:maxLines="1" />
 
