--- a/MyHome/app/src/main/res/layout/profile_view.xml
+++ b/MyHome/app/src/main/res/layout/profile_view.xml
@@ -93,15 +93,15 @@
                 tools:ignore="HardcodedText" />
 
             <TextView
-                android:id="@+id/provider_label"
+                android:id="@+id/plan_label"
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
-                android:text="@string/insurance_provider" />
+                android:text="@string/insurance_plan" />
 
             <TextView
-                android:id="@+id/provider"
+                android:id="@+id/plan"
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
