--- a/MyHome/app/src/main/res/values/colors.xml
+++ b/MyHome/app/src/main/res/values/colors.xml
@@ -386,6 +386,9 @@
     <color name="db_white_two">#ffffff</color>
     <color name="db_white_three">#f5f5f5</color>
 
-
+    <!-- fingerprint -->
+    <color name="warning_color">#f4511e</color>
+    <color name="hint_color">#42000000</color>
+    <color name="success_color">#009688</color>
 
 </resources>
