--- a/MyHome/app/src/main/res/layout/fragment_fad.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad.xml
@@ -73,6 +73,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:clickable="true">
 
                 <android.support.v7.widget.CardView
@@ -82,7 +83,7 @@
                     android:layout_margin="4dp"
                     android:background="@color/white"
                     android:elevation="8dp"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <EditText
                         android:id="@+id/searchQuery"
@@ -95,7 +96,6 @@
                         android:drawablePadding="8dp"
                         android:drawableRight="@mipmap/xblue"
                         android:ellipsize="end"
-                        android:focusableInTouchMode="true"
                         android:gravity="center_vertical"
                         android:hint="@string/search_hint"
                         android:imeOptions="actionSearch"
