--- a/MyHome/app/src/main/res/layout/fragment_fad_dashboard.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad_dashboard.xml
@@ -130,6 +130,17 @@
                 android:layout_centerInParent="true"
                 android:text="@string/no_favorite_doctors"
                 android:visibility="gone" />
+
+            <ProgressBar
+                android:id="@+id/fav_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="8dp"
+                android:indeterminate="true"
+                android:visibility="gone" />
         </RelativeLayout>
     </LinearLayout>
 </layout>
