--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -44,33 +44,37 @@
             android:text="Family Medicine"
             tools:ignore="HardcodedText" />
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/book_appointment_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/doctor_name"
             android:layout_below="@id/speciality"
             android:layout_marginTop="12dp"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/provider_details_fav"
+                android:layout_width="33dp"
+                android:layout_height="28dp"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_favorite_stroke" />
+
             <Button
                 android:id="@+id/book_appointment"
                 style="@style/primaryButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_toRightOf="@+id/provider_details_fav"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 android:text="@string/book_appointment"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="visible" />
 
-            <ImageView
-                android:id="@+id/provider_details_fav"
-                android:layout_width="33dp"
-                android:layout_height="28dp"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_favorite_stroke" />
-        </LinearLayout>
+        </RelativeLayout>
 
         <com.github.aakira.expandablelayout.ExpandableLinearLayout
             android:id="@+id/expandable_layout"
