--- a/MyHome/app/src/main/res/menu/toolbar_menu.xml
+++ b/MyHome/app/src/main/res/menu/toolbar_menu.xml
@@ -8,11 +8,11 @@
         <!--android:title="@string/help"-->
         <!--app:showAsAction="never" />-->
 
-    <!--<item-->
-        <!--android:id="@+id/settings"-->
-        <!--android:icon="@android:drawable/ic_menu_search"-->
-        <!--android:title="@string/settings"-->
-        <!--app:showAsAction="never" />-->
+    <item
+        android:id="@+id/settings"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/settings"
+        app:showAsAction="never" />
 
     <!--<item-->
         <!--android:id="@+id/preferences"-->
