--- a/MyHome/app/src/main/res/layout/settings.xml
+++ b/MyHome/app/src/main/res/layout/settings.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/settings" />
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/appSettings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
