design changes for Security question change.

--- a/MyHome/app/src/main/res/layout/fragment_sec_password.xml
+++ b/MyHome/app/src/main/res/layout/fragment_sec_password.xml
@@ -12,7 +12,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Enter Password for security quetion change" />
+            android:text="Enter Password for security question change"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/enterPassword"
@@ -21,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/desc"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="65dp"
             android:hint="Enter Password"
             android:inputType="text" />
 
