--- a/MyHome/app/src/main/res/layout/fragment_secq.xml
+++ b/MyHome/app/src/main/res/layout/fragment_secq.xml
@@ -51,5 +51,14 @@
             android:onClick="@{handlers::onClickEvent}"
             android:text="@string/action_next"
             android:textStyle="bold" />
+
+        <ProgressBar
+            android:id="@+id/changeSecProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="8dp"
+            android:indeterminate="true"
+            android:visibility="gone" />
     </RelativeLayout>
 </layout>
