--- a/MyHome/app/src/main/res/layout/fragment_sec_password.xml
+++ b/MyHome/app/src/main/res/layout/fragment_sec_password.xml
@@ -24,7 +24,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="65dp"
             android:hint="Enter Password"
-            android:inputType="text" />
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/nextButton"
