--- a/MyHome/app/src/main/res/layout/fragment_change_passowrd.xml
+++ b/MyHome/app/src/main/res/layout/fragment_change_passowrd.xml
@@ -41,37 +41,57 @@
                 tools:ignore="HardcodedText" />
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/newPasswordLayout"
+        <RelativeLayout
+            android:id="@+id/passwordCriteriaLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/existingPasswordLayout"
-            app:errorEnabled="true"
-            app:errorTextAppearance="@style/error_appearance"
-            app:hintTextAppearance="@style/hint_appearance"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/primary">
+            android:layout_below="@+id/existingPasswordLayout">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/newPassword"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/newPasswordLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/log_in_button"
-                android:drawableRight="@mipmap/show_password"
-                android:hint="New Password"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                tools:ignore="HardcodedText" />
-        </android.support.design.widget.TextInputLayout>
+                android:layout_toLeftOf="@+id/password_criteria"
+                app:errorEnabled="true"
+                app:errorTextAppearance="@style/error_appearance"
+                app:hintTextAppearance="@style/hint_appearance"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/primary">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/newPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/log_in_button"
+                    android:drawableRight="@mipmap/show_password"
+                    android:hint="New Password"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
+
+            <ImageView
+                android:id="@+id/password_criteria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:onClick="@{handlers::onClick}"
+                android:paddingBottom="28dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="10dp"
+                android:src="@mipmap/tooltip" />
+        </RelativeLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/confirmPasswordLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/newPasswordLayout"
+            android:layout_below="@+id/passwordCriteriaLayout"
             app:errorEnabled="true"
             app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/hint_appearance"
