coach marks changed for feature based and my care icon changed

--- a/MyHome/app/src/main/res/drawable/ic_my_care.xml
+++ b/MyHome/app/src/main/res/drawable/ic_my_care.xml
@@ -1,15 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="39dp"
-        android:height="39dp"
-        android:viewportWidth="39.0"
-        android:viewportHeight="39.0">
+    android:width="39dp"
+    android:height="39dp"
+    android:viewportHeight="39.0"
+    android:viewportWidth="39.0">
     <path
-        android:pathData="M0,19.5C0,30.27 8.71,39 19.44,39c10.74,0 19.44,-8.73 19.44,-19.5S30.18,0 19.44,0C8.71,0 0,8.73 0,19.5z"
-        android:fillColor="#ED7420"/>
+        android:fillColor="#ED7420"
+        android:pathData="M0,19.5C0,30.27 8.71,39 19.44,39c10.74,0 19.44,-8.73 19.44,-19.5S30.18,0 19.44,0C8.71,0 0,8.73 0,19.5z" />
     <path
-        android:pathData="M13.46,19.36h11.06v-0.78L13.46,18.57v0.78zM13.46,21.31h11.06v-0.78L13.46,20.53v0.78zM13.46,23.35h11.06v-0.78L13.46,22.56v0.78zM21.08,15.16a2.08,2.08 0,1 1,-4.16 0,2.08 2.08,0 0,1 4.16,0zM14.9,10.88h0.13c0,-0.39 0.42,-1.25 1.44,-1.25C16.54,7.78 17.73,6.86 18.94,6.86c1.22,0 2.45,0.93 2.59,2.77 0.98,0 1.42,0.86 1.42,1.25h0.13c0.32,0 0.59,0.38 0.59,0.84L14.31,11.72c0,-0.46 0.26,-0.84 0.59,-0.84zM24.29,9.33h-1.26a2.22,2.22 0,0 0,-0.74 -0.44C21.88,6.99 20.37,6 18.94,6c-1.39,0 -2.9,0.91 -3.26,2.89a2.21,2.21 0,0 0,-0.74 0.44L13.71,9.33A2.72,2.72 0,0 0,11 12.04v15.49c0,1.49 1.22,2.71 2.71,2.71h10.58c1.49,0 2.71,-1.22 2.71,-2.71L27,12.04c0,-1.49 -1.22,-2.71 -2.71,-2.71z"
-        android:fillColor="#FFF"/>
+        android:fillColor="#FFF"
+        android:pathData="M21.08,15.15a2.08,2.08 0,1 1,-4.16 0,2.08 2.08,0 0,1 4.16,0zM14.9,10.88h0.13c0,-0.39 0.42,-1.25 1.44,-1.25 0.07,-1.85 1.26,-2.77 2.47,-2.77 1.22,0 2.45,0.93 2.59,2.77 0.98,0 1.42,0.86 1.42,1.25h0.13c0.32,0 0.59,0.38 0.59,0.84h-9.36c0,-0.46 0.26,-0.84 0.59,-0.84zM24.29,9.33h-1.26a2.22,2.22 0,0 0,-0.74 -0.44c-0.41,-1.9 -1.92,-2.89 -3.35,-2.89 -1.39,0 -2.9,0.91 -3.26,2.89a2.21,2.21 0,0 0,-0.74 0.44h-1.23A2.72,2.72 0,0 0,11 12.04v15.49c0,1.49 1.22,2.71 2.71,2.71h10.58c1.49,0 2.71,-1.22 2.71,-2.71L27,12.04c0,-1.49 -1.22,-2.71 -2.71,-2.71z" />
     <path
-        android:pathData="M20,14.75h-0.59v-0.59a0.24,0.24 0,0 0,-0.24 -0.24h-0.33a0.24,0.24 0,0 0,-0.24 0.24v0.59h-0.59a0.24,0.24 0,0 0,-0.24 0.24v0.32c0,0.13 0.11,0.24 0.24,0.24h0.59v0.59c0,0.13 0.11,0.24 0.24,0.24h0.33c0.13,0 0.24,-0.11 0.24,-0.24L19.4,15.56h0.59a0.24,0.24 0,0 0,0.24 -0.24v-0.32a0.24,0.24 0,0 0,-0.24 -0.24M19,8.93A0.68,0.68 0,1 1,19 7.57a0.68,0.68 0,0 1,-0 1.37"
-        android:fillColor="#FFF"/>
+        android:fillColor="#ED7420"
+        android:pathData="M13.46,19.36h11.06v-0.78H13.46zM13.46,21.31h11.06v-0.78H13.46zM13.46,23.34h11.06v-0.78H13.46z" />
+    <path
+        android:fillColor="#FFF"
+        android:pathData="M20,14.75h-0.59v-0.59a0.24,0.24 0,0 0,-0.24 -0.24h-0.33a0.24,0.24 0,0 0,-0.24 0.24v0.59h-0.59a0.24,0.24 0,0 0,-0.24 0.24v0.32c0,0.13 0.11,0.24 0.24,0.24h0.59v0.59c0,0.13 0.11,0.24 0.24,0.24h0.33c0.13,0 0.24,-0.11 0.24,-0.24v-0.59h0.59a0.24,0.24 0,0 0,0.24 -0.24v-0.32a0.24,0.24 0,0 0,-0.24 -0.24M19,8.93A0.68,0.68 0,1 1,19 7.57a0.68,0.68 0,0 1,-0 1.37" />
 </vector>
