Fixed 18318: Andriod - Action Bar line is disappearing while scrolling down

--- a/MyHome/app/src/main/res/layout/navigation_activity.xml
+++ b/MyHome/app/src/main/res/layout/navigation_activity.xml
@@ -13,6 +13,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:elevation="0.5dp"
         android:layout_below="@+id/toolbar"
         android:background="@color/md_blue_grey_650" />
 
