Fixed 12799: Address, Address 2, and City now capitalize the next word when a space occurs

--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -176,7 +176,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                         android:ellipsize="end"
                         android:hint="@string/city"
-                        android:inputType="text"
+                        android:inputType="textCapWords"
                         android:maxLines="2" />
 
                 </android.support.design.widget.TextInputLayout>
