--- a/MyHome/app/src/main/res/layout/book_confirmation.xml
+++ b/MyHome/app/src/main/res/layout/book_confirmation.xml
@@ -59,7 +59,7 @@
             android:layout_height="45dp"
             android:layout_gravity="center"
             android:layout_marginTop="46dp"
-            android:text="Book this appointment" />
+            android:text="@string/book_this_appointment" />
 
     </LinearLayout>
 </ScrollView>
