--- a/MyHome/app/src/main/res/values/string_arrays.xml
+++ b/MyHome/app/src/main/res/values/string_arrays.xml
@@ -83,4 +83,12 @@
         <!--<item>Prefer Not To Say</item>-->
     </string-array>
 
+    <!--States for Profile Edit - Prefer Not To Say isn't working currently-->
+    <string-array name="build_env">
+        <item>Dev</item>
+        <item>Stage</item>
+        <item>Prod</item>
+        <!--<item>Prefer Not To Say</item>-->
+    </string-array>
+
 </resources>
