--- a/MyHome/app/src/main/res/layout/fragment_secq.xml
+++ b/MyHome/app/src/main/res/layout/fragment_secq.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -24,21 +25,30 @@
             android:focusableInTouchMode="false"
             android:onClick="@{handlers::onClickEvent}" />
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/answer"
-            style="@style/tradeGothicLTStdLight_14"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/answerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/select_question"
             android:layout_marginTop="70dp"
-            android:drawableRight="@mipmap/tooltip"
-            android:hint="@string/prompt_answer"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:lines="1"
-            android:maxLines="1"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp" />
+            app:errorEnabled="true"
+            app:errorTextAppearance="@style/error_appearance"
+            app:hintTextAppearance="@style/hint_appearance">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/answer"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableRight="@mipmap/tooltip"
+                android:hint="@string/prompt_answer"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:lines="1"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
+        </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/submit_question"
@@ -47,8 +57,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="40dp"
-            android:layout_marginLeft="42dp"
-            android:layout_marginRight="42dp"
             android:onClick="@{handlers::onClickEvent}"
             android:text="@string/action_next"
             android:textStyle="bold" />
