--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -113,7 +113,7 @@
                     android:layout_marginRight="42dp">
 
                     <android.support.design.widget.TextInputLayout
-                        android:id="@+id/passwordLayout"
+                        android:id="@+id/enPasswordLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_toLeftOf="@+id/password_criteria"
@@ -139,9 +139,9 @@
                         android:id="@+id/password_criteria"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignBottom="@id/passwordLayout"
+                        android:layout_alignBottom="@id/enPasswordLayout"
                         android:layout_alignParentRight="true"
-                        android:layout_alignTop="@id/passwordLayout"
+                        android:layout_alignTop="@id/enPasswordLayout"
                         android:layout_marginBottom="28dp"
                         android:layout_marginTop="10dp"
                         android:onClick="@{handlers::onClickEvent}"
